istio-keycloak/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: corporate
  labels:
    app: corporate
    service: corporate
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: corporate
---
apiVersion: v1
kind: Service
metadata:
  name: enterprise
  labels:
    app: enterprise
    service: enterprise
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: enterprise
---
