istio-keycloak/gateway.yaml
apiVersion: networking.istio.io/v1alpha3    
kind: Gateway                               
metadata:                                   
  name: keycloak-gateway
  namespace: default
spec:                                       
  selector:                                 
    istio: ingressgateway                   
  servers:                                  
  - hosts:                                  
    - '*'                                   
    port:                                   
      name: http                            
      number: 80                            
      protocol: HTTP
###########################################
#apiVersion: networking.istio.io/v1alpha3  
#kind: Gateway                             
#metadata:                                 
#  name: oauth-gateway                     
#spec:                                     
#  selector:                               
#    istio: ingressgateway           
#  servers:
#  - port:
#      number: 443
#      name: https
#      protocol: HTTPS
#    tls:
#      mode: SIMPLE
#      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
#      privateKey: /etc/istio/ingressgateway-certs/tls.key
#    hosts:
#    - '*'
#  - port:
#      number: 31400
#      name: http
#      protocol: HTTP
#    hosts:
#    - '*'
#  tls:
#      httpsRedirect: true
###########################################
###########################################
#apiVersion: networking.istio.io/v1alpha3
#kind: Gateway
#metadata:
#  name: oauth-gateway
#spec:
#  selector:
#    istio: ingressgateway
#  servers:
#  - port:
#      number: 80
#      name: http
#      protocol: HTTP
#    tls:
#      mode: SIMPLE
#      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
#      privateKey: /etc/istio/ingressgateway-certs/tls.key
#    hosts:
#    - '*'
#  - port:
#      number: 443
#      name: https-httpbin
#      protocol: HTTPS
#    tls:
#      mode: SIMPLE
#      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
#      privateKey: /etc/istio/ingressgateway-certs/tls.key
#    hosts:
#    - '*'
############################################# 
#apiVersion: networking.istio.io/v1alpha3    
#kind: Gateway                               
#metadata:                                   
#  name: oauth-gateway                       
#spec:                                       
#  selector:                                 
#    istio: ingressgateway                   
#  servers:                                  
#  - hosts:                                  
#    - '*'                                   
#    port:                                   
#      name: http                            
#      number: 80                            
#      protocol: HTTP                        
#############################################
