istio-keycloak/destinationRules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: enterprise
spec:
  host: enterprise
  subsets:
  - name: enterprise-s1
    labels:
      version: v1
  - name: enterprise-s2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: corporate
spec:
  host: corporate
  subsets:
  - name: corporate-s1
    labels:
      version: v1
  - name: corporate-s2
    labels:
      version: v2
