istio-keycloak/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: authenticationrequest
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "http://keycloak.keycloak-ns:8080/auth/realms/master"
    jwksUri: "http://keycloak.keycloak-ns.svc.cluster.local:8080/auth/realms/master/protocol/openid-connect/certs"
    forwardOriginalToken: true
    outputPayloadToHeader: x-jwt-payload
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authorizationpolicy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
  - from:
    - source:
       notRequestPrincipals: ["*"]
---
#apiVersion: security.istio.io/v1beta1
#kind: RequestAuthentication
#metadata:
#  name: authenticationrequest
#  namespace: istio-system
#spec:
#  selector:
#    matchLabels:
#      istio: ingressgateway
#  jwtRules:
#  - issuer: "http://localhost:30080/auth/realms/master"
#    jwksUri: "http://localhost:30080//auth/realms/master/protocol/openid-connect/certs"
#    forwardOriginalToken: true
#    outputPayloadToHeader: x-jwt-payload
#######################################################################################################
########     kubectl apply -f - <<EOF
########    apiVersion: "security.istio.io/v1beta1"
########    kind: "RequestAuthentication"
########    metadata:
########      name: "authenticationrequest"
########      namespace: istio-system
########    spec:
########      selector:
########        matchLabels:
########          istio: ingressgateway
########      jwtRules:
########      - issuer: "testing@secure.istio.io"
########        jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.8/security/tools/jwt/samples/jwks.json"
########    EOF
########    
########     kubectl apply -f - <<EOF
########    apiVersion: "security.istio.io/v1beta1"
########    kind: "AuthorizationPolicy"
########    metadata:
########      name: "authorizationpolicy"
########      namespace: istio-system
########    spec:
########      selector:
########        matchLabels:
########          istio: ingressgateway
########      action: DENY
########      rules:
########      - from:
########        - source:
########            notRequestPrincipals: ["*"]
########    EOF
#######################################################################################################
